# hope-io

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CORO_SUPPORT.md  README.md  bench_tcp.sh  bench_tls.sh  bench_tls_latency.sh
.agents/skills/review-code/: SKILL.md
benchmark/: CMakeLists.txt  bench_event_loop.cpp  bench_latency.cpp  bench_uring_raw.cpp
crt/: cert.pem  key.pem
lib/: CMakeLists.txt
lib/hope-io/: coredefs.h  delegate.h
lib/hope-io/net/: acceptor.h  async_stream.h  event_loop.h  factory.h  init.h  stream.h  stream_coro.h  stream_options_util.h  tls_event_loop.h  udp_builder.h  udp_receiver.h  udp_sender.h
lib/hope-io/net/linux/: event_loop.cpp  event_loop2.cpp  event_loop_impl.cpp  event_loop_impl.h  tls_event_loop_impl.cpp  tls_event_loop_impl.h
lib/hope-io/net/nix/: event_loop_impl.cpp  event_loop_impl.h  nix_acceptor.cpp  nix_event_loop.cpp  nix_init.cpp  nix_receiver.cpp  nix_sender.cpp  nix_stream.cpp  nix_tls_event_loop.cpp  nix_udp_builder.cpp  tcp_acceptor.cpp  tcp_acceptor.h  tcp_stream.cpp  tcp_stream.h  tls_event_loop_impl.cpp  tls_event_loop_impl.h  udp_builder_impl.cpp  udp_builder_impl.h  udp_receiver_impl.cpp  udp_receiver_impl.h  udp_sender_impl.cpp  udp_sender_impl.h
lib/hope-io/net/tls/: ktls_enable.cpp  ktls_enable.h  tcp_tls_stream.cpp  tcp_tls_stream.h  tls_acceptor.cpp  tls_acceptor_impl.cpp  tls_acceptor_impl.h  tls_init.cpp  tls_init.h  tls_server_stream.h  tls_stream.cpp  tls_stream.h
lib/hope-io/net/uring/: uring_core.h  uring_tcp_event_loop.h  uring_tls_event_loop.h
lib/hope-io/net/websockets/: tls_websockets_stream.cpp  websockets.h  websockets_utils.cpp
lib/hope-io/net/win/: event_loop_impl.cpp  event_loop_impl.h  tcp_acceptor.cpp  tcp_acceptor.h  tcp_stream.cpp  tcp_stream.h  udp_builder_impl.cpp  udp_builder_impl.h  udp_receiver_impl.cpp  udp_receiver_impl.h  udp_sender_impl.cpp  udp_sender_impl.h  win_acceptor.cpp  win_init.cpp  win_receiver.cpp  win_sender.cpp  win_stream.cpp  win_udp_builder.cpp
lib/hope-io/proto/: argument.h  argument_array.h  argument_container.h  argument_factory.cpp  argument_factory.h  argument_file.h  argument_generic.h  argument_struct.h  message.h
lib/hope-io/request/: request.h
lib/icarus-proto/: coredefs.h
lib/icarus-proto/net/: acceptor.h  factory.h  init.h  stream.h
lib/icarus-proto/net/mac/: mac_acceptor.cpp  mac_acceptor.h  mac_stream.cpp  mac_stream.h
lib/icarus-proto/net/nix/: nix_acceptor.cpp  nix_init.cpp  nix_stream.cpp
lib/icarus-proto/net/win/: win_acceptor.cpp  win_acceptor.h  win_init.cpp  win_init.h  win_stream.cpp  win_stream.h
lib/icarus-proto/proto/: argument.h  argument_array.h  argument_container.h  argument_factory.cpp  argument_factory.h  argument_file.h  argument_generic.h  argument_struct.h  message.h
lib/icarus-proto/protocol/: argument.h  argument_array.h  argument_container.h  argument_factory.cpp  argument_factory.h  argument_file.h  argument_generic.h  argument_struct.h  message.h
lib/ikarus-proto/message/: request.h  response.h
lib/ikarus-proto/net/: stream.h
lib/ikarus-proto/protocol/: argument.h  argument_aray.h  argument_container.h  argument_file.h  argument_generic.h  argument_struct.h
samples/: CMakeLists.txt  bench_event_loop.cpp  bench_tls_io_uring.cpp  bench_tls_io_uring_ktls.cpp  bench_tls_ktls.cpp  bench_tls_latency.cpp  bench_tls_raw.cpp  binance_get_price.cpp  coro_stream_client.cpp  event_loop_kv_storage.cpp  event_loop_kv_storage_client.cpp  http_server.cpp  io_uring_echo_client.cpp  io_uring_echo_server.cpp  kv_misc.h  main.cpp  message.h  order_book_ws.cpp  slack_sample.cpp  tcp_echo_client.cpp  tcp_echo_event_loop.cpp  tcp_echo_event_loop_client.cpp  tcp_echo_event_loop_multiclient.cpp  tcp_echo_event_loop_server.cpp  tcp_echo_server.cpp  telegram_bot.cpp  tls_echo_client.cpp  tls_echo_server.cpp  tls_echo_server_async.cpp  tls_echo_server_event_loop.cpp  udp_echo_client.cpp  udp_echo_server.cpp
samples/binance/: CMakeLists.txt  main.cpp
samples/proto/: CMakeLists.txt
samples/telegram/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  README.md  kv_serialization.cpp  mock_stream.h  serialization.cpp  test_coro_stream.cpp  test_error_handling.cpp  test_event_loop.cpp  test_main.cpp  test_platform_compatibility.cpp  test_tcp_acceptor.cpp  test_tcp_stream.cpp  test_tls.cpp  test_tls_event_loop.cpp  test_udp.cpp  test_write_v.cpp  tests.cpp
test/certs/: cert.pem  ec_cert.pem  ec_key.pem  gen_certs.sh  key.pem
